--- a/readlogs/pom.xml
+++ b/readlogs/pom.xml
@@ -48,7 +48,7 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>3.0.0</version>
 				<configuration>
-					<mainClass>com.test.readlogs.LogReader</mainClass>
+					<mainClass>com.readlogs.implementation_new.AppTest</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
